Fixed spacing in the education section

--- a/Profile.css
+++ b/Profile.css
@@ -215,8 +215,17 @@ ul{
  margin-bottom:80px;
 }
 
-hr{
-  color: rgb(14,180,124);
+.education-separator{
+ color: rgb(14,180,124);
+}
+
+.education-border{
+  color: transparent;
+ /* color: rgb(14,180,124);*/
+}
+
+h5, h6, .education-description{
+  margin-left: 2%;
 }
 
 /*************************************Footer*************************************************/
